--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,56 @@ header p {
     font-size: 1.3em;
 }
 
+
+/*--- STYLING LINKS ---*/
+a {
+    color: #8f0040;
+    text-decoration: none;
+}
+a:hover {
+    color: green;
+    border-bottom: 1px dotted;
+}
+
+/*--- NAVIGATION ---*/
+nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    margin: 0;
+    width: 100%;
+    background-color: #8f0040;
+    padding: 1em 0;
+    font-size: 0.75em;
+}
+
+nav ul {
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+nav ul li {
+    display: inline;
+    margin: 20px;
+    background: none;
+}
+
+nav a {
+    color: #fdfdfd;
+}
+
+nav a:hover {
+    border-bottom: none;
+    color: #fab4d3;
+    transition: all 0.3s ease-in-out;
+}
+
+/* nav a:link {
+    color: #fdfdfd;
+}
+
+/*--- FOOTER ---*/
 footer {
     text-align: center;
     font-size: 0.707em;
