--- a/css/style_two.css
+++ b/css/style_two.css
@@ -1,4 +1,4 @@
-/*------ CSS Reset ------*/
+/*------ CSS Reset -   -----*/
 
 * {
     padding: 0;
@@ -6,44 +6,50 @@
     font-size: 100%;
     line-height: 1em;
 }
-/*------ MAIN STYLING ------*/
+
+/*------- MAIN STYLING ----*/
 body {
     width: 80%;
     max-width: 700px;
     margin: auto;
     background: #fdfdfd;
     color: #333;
+    font-family: 'Lato', sans-serif;
+    font-family: 'Libre Baskerville', serif;
 }
-
 
 /*---- TYPOGRAPHY ----*/
 h1, h2 {
     font-weight: normal;
     color: #8f0040;
     text-align: center;
+    
 }
 
 p, blockquote {
     margin-bottom: 1.5em;
-    line-height: 1.5;
+    line-height: 1.4;
+}
+
+h1, h2, nav, blockquote, footer {
+    font-family: 'Libre Baskerville', serif;
 }
 
 h1 {
-    font-size: 3.827em;
+    font-size: 4em;
     margin-top: 2em;
-    margin-bottom: 0.3em;
 }
 
 h2 {
     font-size: 1.999em;
-    margin: 3em 0 1em 0;
+    margin: 5em 0 1em 0;
 }
 
 blockquote {
-    font-size: 1.414em;
+    font-size: 1.3em;
     color: #8f0040;
     hanging-punctuation: first;
-    text-indent: -0.4em;
+    text-indent: -0.42em;
 }
 
 blockquote cite {
@@ -51,14 +57,32 @@ blockquote cite {
     color: #333;
 }
 
+p, cite {font-family: 'Lato', sans-serif;}
+
 header h2 {
     font-style: italic;
-    margin-top: 0;
-    margin-bottom: 1.5em;
+    margin-top: 0.3em;
+    margin-bottom: 1.2em
 }
 
 header p {
     font-size: 1.3em;
+    font-family: 'Baskervville', serif;
+}
+
+hr {
+    margin-top: 5em;
+    height: 1px;
+    background: #8f0040;
+    color: #8f0040;
+    border: 0 none;
+}
+
+.leader {
+    
+    text-transform: uppercase;
+    color: #8f0040; 
+    font-variant-numeric: oldstyle-nums;
 }
 
 
@@ -66,6 +90,10 @@ header p {
 a {
     color: #8f0040;
     text-decoration: none;
+}
+
+a:visited {
+    color: #8f0040;
 }
 a:hover {
     color: green;
@@ -83,11 +111,10 @@ nav {
     padding: 1em 0;
     font-size: 0.75em;
 }
-
 nav ul {
     text-align: center;
     text-transform: uppercase;
-    letter-spacing: 1px;
+    letter-spacing: 1px
 }
 
 nav ul li {
@@ -97,22 +124,22 @@ nav ul li {
 }
 
 nav a {
-    color: #fdfdfd;
+    color: #fdfdfd
+}
+
+nav a:visited {
+    color: #fdfdfd
 }
 
 nav a:hover {
     border-bottom: none;
-    color: #fab4d3;
+    color: #fc8ebf;
     transition: all 0.3s ease-in-out;
-}
-
-/* nav a:link {
-    color: #fdfdfd;
 }
 
 /*--- FOOTER ---*/
 footer {
     text-align: center;
     font-size: 0.707em;
-    padding: 4em 0 8em 0;
+    margin: 5em 0 8em 0
 }
