--- a/css/style_type.css
+++ b/css/style_type.css
@@ -23,7 +23,7 @@ h1, h2 {
     font-weight: normal;
     color: #00678f;
     text-align: center;
-    
+    margin-bottom: 0.5em;
 }
 
 p, blockquote {
@@ -37,12 +37,12 @@ h1, h2, nav, blockquote, footer {
 
 h1 {
     font-size: 4em;
-    margin-top: 2em;
+    margin-top: 3em;
 }
 
 h2 {
     font-size: 1.999em;
-    margin: 5em 0 1em 0;
+    margin: 6em 0 1em 0;
 }
 
 blockquote {
@@ -62,7 +62,7 @@ p, cite {font-family: 'Roboto', sans-serif;}
 header h2 {
     font-style: italic;
     margin-top: 0.3em;
-    margin-bottom: 1.2em
+    margin-bottom: 2em
 }
 
 header p {
