--- a/css/style_three.css
+++ b/css/style_three.css
@@ -1,105 +1,184 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8" />
-    <meta name="author" content="Jessica Donnan">
-    <title>John Baskerville Version 4</title>
+/*------ CSS Reset -   -----*/
 
-    <!-- LINKING CSS FILE -->
-    <link href="css/style_three.css" type="text/css" rel="stylesheet" />
+* {
+    padding: 0;
+    margin: 0;
+    font-size: 100%;
+    line-height: 1em;
+}
 
-    <!-- ADDED GOOGLE FONT -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Baskervville&family=Lato&family=Libre+Baskerville:ital@0;1&display=swap" rel="stylesheet">
+/*------- MAIN STYLING ----*/
+body {
+    width: 80%;
+    max-width: 600px;
+    margin: auto;
+    background: #fdfdfd;
+    color: #333;
+    font-family: 'Lato', sans-serif;
+    font-family: 'Libre Baskerville', serif;
+}
 
-</head>
+/*---- TYPOGRAPHY ----*/
+h1, h2 {
+    font-weight: normal;
+    color: #8f0040;
+    text-align: center;
+    
+}
 
-<body>
-    <nav>
-        <ul>
-            <li><a href="#the-man">The Man</a></li>
-            <li><a href="#the-typeface">The Typeface</a></li>
-            <li><a href="#mrs-eaves">Mrs Eaves</a></li>
-            <li><a href="history-one.html">Type History</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
+p, blockquote {
+    margin-bottom: 1.5em;
+    line-height: 1.4;
+}
 
-<article>
-    <header>   
-        <h1>John Baskerville</h1>
-            <h2>Letter Founder & Master Printer</h2>
-            <p><span class='leader'>John Baskerville (1706–1775)</span>  was an English businessman whose entrepreneurial attentions included <i>japanning</i> and <i>papier-mâché</i>; he is, however, best remembered as a typographer and printer, not least for the design of the eponymous typeface which, to this very day, bears his name.</p>
-    </header> 
-<hr>
-<section>
-    <h2 id="the-man">The Man</h2>
-    <img src="img/john-baskerville.jpg" alt="A portrait of John Baskerville" title="John Baskerville designed his famous serif typeface in 1757" />
-        <p>Baskerville was born in the village of Wolverley, near Kidderminster in Worcestershire, and worked as a printer in Birmingham. Baskerville printed works for the University of Cambridge and, although an atheist, printed a splendid folio bible in 1763. His typefaces were greatly admired by Benjamin Franklin, a printer and fellow member of the Royal Society of Arts, who took the designs back to the newly-created United States, where they were adopted for most federal government publishing.</p>
+h1, h2, nav, blockquote, footer {
+    font-family: 'Libre Baskerville', serif;
+}
 
-        <p>Baskerville was responsible for numerous innovations in printing, paper and ink production. He developed a technique which produced a smoother whiter paper which showcased his strong black type. He also pioneered a completely new style of typography, adding wide margins and generous leading to improve legibility.</p>
+h1 {
+    font-size: 4em;
+    margin-top: 2em;
+}
 
-        <blockquote>“Having been an early admirer of the beauty of letters, I became insensibly desirous of contributing to the perfection of them. I formed to myself ideas of greater accuracy than had yet appeared, and had endeavoured to produce a set of types according to what I conceived to be their true proportion.” <br><cite>—John Baskerville, preface to Milton, 1758 (Anatomy of a Typeface)</cite></blockquote>
-</section>
-<hr>
-<section>
-    <h2 id="the-typeface">The Typeface</h2>
-    <img src="img/type-specimen.jpg" alt="A sample of the Baskerville typeface" />
-        <p>Baskerville is a Transitional serif typeface designed by John Baskerville in 1757, positioned between the Old Style typefaces of <b>William Caslon</b>, and the modern styles of <b>Giambattista Bodoni</b> and <b>Firmin Didot</b>.</p>
+h2 {
+    font-size: 1.999em;
+    margin: 5em 0 1em 0;
+}
 
-        <p>The typeface is the result of Baskerville’s intent to improve upon the types of William Caslon. He increased the contrast between thick and thin strokes, making the serifs sharper and more tapered, and shifted the axis of rounded letters to a more vertical position. The curved strokes are more circular in shape, and the characters became more regular. These changes created a greater consistency in size and form</p>
+blockquote {
+    font-size: 1.3em;
+    color: #8f0040;
+    hanging-punctuation: first;
+    text-indent: -0.42em;
+}
 
-        <p>Baskerville’s work was criticised by jealous competitors and soon fell out of favour. Since the 1920s, however, numerous revivals of Baskerville have been released by Linotype, Monotype, and other type foundries. Émigré released a popular revival of the typeface in 1996 called Mrs Eaves, named for Baskerville’s wife, Sarah Eaves. Baskerville represents the peak of Transitional type face design and bridges the gap between Old Style and Modern type design.</p>
+blockquote cite {
+    font-size: 0.75em;
+    color: #333;
+}
 
-        <table>
-            <caption>Foundries that offer versions of Baskerville:</caption>
-            <tr>
-                <th>Hot type</th>
-                <th>Cold type</th>
-                <th>Digital type</th>
-            </tr>
-            <tr>
-                <td>Deberny & Peignot</td>
-                <td>Autologic</td>
-                <td>Linotype</td>
-            </tr>
-            <tr>
-                <td>Fry Foundry</td>
-                <td>Berthold</td>
-                <td>URW++</td>
-            </tr>
-            <tr>
-                <td>American Type Founders</td>
-                <td>Compugraphic</td>
-                <td>Monotype</td>
-            </tr>
-            <tr>
-                <td>Linotype</td>
-                <td>Hell AG</td>
-                <td>Bitstream</td>
-            </tr>
-            <tr>
-                <td>Lanston Monotype</td>
-                <td>Monotype</td>
-                <td></td>
-            </tr>
-        </table>
-</section>
-<hr>
-<section>
-    <h2 id="mrs-eaves">Mrs Eaves</h2>
-    <img src="img/mrs-eaves.jpg" alt="A contemporary version of the famous typeface" />
-        <p>Mrs Eaves is named after Sarah Eaves, the woman who became John Baskerville’s wife. As Baskerville was setting up his printing and type business, Mrs. Eaves moved in with him as a live-in housekeeper, eventually becoming his wife after the death of her first husband, Mr. Eaves. Mrs Eaves is a revival of the types of English printer and punchcutter John Baskerville, and is related to contemporary Baskerville typefaces.</p>
+p, cite {font-family: 'Lato', sans-serif;}
 
-        <p>Like Baskerville, Mrs Eaves, cut by <a href="https://www.emigre.com/Designer/ZuzanaLicko" target="_blank" title="Clicking this link will take you to a separate website about Zuzana.">Zuzana Licko</a> of Émigré, has a near vertical stress, departing from the Old Style model. Identifying characters, similar to Baskerville’s types, are the lowercase g with its open lower counter and swash-like ear. Both the roman and italic uppercase Q have a flowing swash-like tail. The uppercase C has serifs at top and bottom; there is no serif at the apex of the central junction in uppercase W; and the uppercase G has a sharp spur suggesting a vestigial serif.</p>
-</section>
-</article>
-<hr>
-<footer id="contact">
-    <p>The content on this page is developed from original copy from Wikipedia and licensed under a Creative Commons Attribution-ShareAlike License, meaning you’re allowed to copy, distribute and transmit the work as long as it is attributed to the original authors.</p>
-    <a href="http://www.ixdbelfastgrads.com" target="_blank" title="Take a look at our students work.">View the graduate shows</a>
-    <a href="mailto:donnan-j2@ulster.ac.uk" title="Feel free to drop me an email.">Get in touch</a>
-</footer>
+header h2 {
+    font-style: italic;
+    margin-top: 0.3em;
+    margin-bottom: 1.2em
+}
 
-</body>
-</html>
+header p {
+    font-size: 1.3em;
+    font-family: 'Baskervville', serif;
+}
+
+hr {
+    margin-top: 5em;
+    height: 1px;
+    background: #8f0040;
+    color: #8f0040;
+    border: 0 none;
+}
+
+.leader {
+    
+    text-transform: uppercase;
+    color: #8f0040; 
+    font-variant-numeric: oldstyle-nums;
+}
+
+
+/*--- STYLING LINKS ---*/
+a {
+    color: #8f0040;
+    text-decoration: none;
+}
+
+a:visited {
+    color: #8f0040;
+}
+a:hover {
+    color: green;
+    border-bottom: 1px dotted;
+}
+
+/*--- NAVIGATION ---*/
+nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    margin: 0;
+    width: 100%;
+    background-color: #8f0040;
+    padding: 1em 0;
+    font-size: 0.75em;
+}
+nav ul {
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 1px
+}
+
+nav ul li {
+    display: inline;
+    margin: 20px;
+    background: none;
+}
+
+nav a {
+    color: #fdfdfd
+}
+
+nav a:visited {
+    color: #fdfdfd
+}
+
+nav a:hover {
+    border-bottom: none;
+    color: #fc8ebf;
+    transition: all 0.3s ease-in-out;
+}
+
+/*----- STYLING TABLE -----*/
+table {
+    margin: auto;
+    display: table;
+    border-collapse: collapse;
+    border-spacing: 2px;
+    margin-bottom: 2em;
+    width: 100%;
+}
+
+caption {
+    margin: 1.5em 0;
+    text-transform: uppercase;
+}
+th {
+    color: #fdfdfd;
+    text-transform: uppercase;
+    font-weight: normal;
+    text-align: left;
+    background: #8f0040;
+}
+
+th, td {
+    padding: 0.6em
+}
+
+table, td {
+    background: #f9e7ef;
+    border: 2px solid #fdfdfd
+}
+
+/*----- IMAGES -----*/
+img {
+    display: block;
+    margin: 4em 0;
+    padding: 0;
+    max-width: 100%;
+}
+
+/*--- FOOTER ---*/
+footer {
+    text-align: center;
+    font-size: 0.707em;
+    margin: 5em 0 8em 0
+}
