--- a/css/css_exercise.css
+++ b/css/css_exercise.css
@@ -1,11 +1,9 @@
 body{
     max-width: 700px;
     margin: auto;
-    padding: 0 30px;
+    padding: 50px 30px;
     
 }
-
-
 
 h1,h2,h3,blockquote, .dropcap {color:rgb(25, 168, 179);}
 
